build: update additional dependencies for Angular 14 compatibility

--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
-    "@ng-select/ng-select": "~8.1.1",
+    "@ng-select/ng-select": "~9.0.2",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
     "font-awesome": "4.7",
     "lodash": "~4.17.21",
     "luxon": "~3.0.0",
-    "ngx-bootstrap": "~8.0.0",
+    "ngx-bootstrap": "~9.0.0",
     "roboto-fontface": "0.10",
     "rxjs": "~7.5.0",
     "socket.io-client": "^2.2.0",
@@ -59,7 +59,7 @@
     "@types/webpack": "4.41",
     "@typescript-eslint/eslint-plugin": "5.36.2",
     "@typescript-eslint/parser": "5.36.2",
-    "eslint": "^8.23.0",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
