--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,11 @@
   "ignorePatterns": [
     "projects/**/*"
   ],
+  "settings": {
+    "import/resolver": {
+      "typescript": {} // this loads <rootdir>/tsconfig.js to eslint
+    }
+  },
   "overrides": [
     {
       "files": [
@@ -14,6 +19,7 @@
         ],
         "createDefaultProgram": true
       },
+      "plugins": ["deprecation"],
       "extends": [
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
@@ -39,6 +45,11 @@
             "style": "kebab-case"
           }
         ],
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          { "vars": "all", "args": "none" }
+        ],
+        "deprecation/deprecation": "warn", // or "error" to have stricter rule
         "no-restricted-imports": ["error", {
           "paths": [
             "lodash",
@@ -65,7 +76,7 @@
             "caseInsensitive": true
           }
         }],
-        "import/no-unresolved": ["off"],
+        "import/no-unresolved": ["error"],
         "rxjs/prefer-observer": ["error"],
         "rxjs/finnish": ["error", {
           "methods": false
