--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-select/ng-select": "~9.0.2",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "font-awesome": "4.7",
     "lodash": "~4.17.21",
     "luxon": "~3.0.0",
@@ -61,6 +62,7 @@
     "@typescript-eslint/parser": "5.36.2",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-deprecation": "^1.3.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-rxjs": "^5.0.2",
