--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:prod": "ng serve --proxy-config proxy.conf.json --configuration production",
     "build": "npm run lint && ng build",
     "build:prod": "npm run lint && ng build --configuration production",
-    "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es2015.json",
-    "build:bundle-report:prod": "ng build --configuration production --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats-es2015.json",
+    "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
+    "build:bundle-report:prod": "ng build --configuration production --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
     "test": "ng test --code-coverage",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
@@ -32,7 +32,6 @@
     "@ng-select/ng-select": "~9.0.2",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
-    "eslint-import-resolver-typescript": "^3.5.1",
     "lodash": "~4.17.21",
     "luxon": "~3.2.1",
     "ngx-bootstrap": "~9.0.0",
@@ -62,10 +61,12 @@
     "@typescript-eslint/parser": "5.36.2",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-deprecation": "^1.3.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-rxjs": "^5.0.2",
+    "eslint-plugin-rxjs-angular": "^2.0.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
