--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "start:es5": "ng serve --proxy-config proxy.conf.json --configuration es5",
     "start:prod": "ng serve --proxy-config proxy.conf.json --configuration production",
     "build": "npm run lint && ng build",
     "build:prod": "npm run lint && ng build --configuration production",
     "build:bundle-report": "ng build --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
     "build:bundle-report:prod": "ng build --configuration production --stats-json && webpack-bundle-analyzer dist/ngx-starter/stats.json",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test --code-coverage",
     "test:ci": "ng test --watch=false --code-coverage",
     "lint": "ng lint && stylelint './src/**/*.scss'",
@@ -18,48 +18,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.1",
-    "@angular/cdk": "^14.2.1",
-    "@angular/common": "^14.2.1",
-    "@angular/compiler": "^14.2.1",
-    "@angular/core": "^14.2.1",
-    "@angular/forms": "^14.2.1",
-    "@angular/localize": "^14.2.1",
-    "@angular/platform-browser": "^14.2.1",
-    "@angular/platform-browser-dynamic": "^14.2.1",
-    "@angular/router": "^14.2.1",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
     "@fortawesome/fontawesome-free": "^6.2.1",
-    "@ng-select/ng-select": "~9.0.2",
+    "@ng-select/ng-select": "~10.0.4",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
     "lodash": "~4.17.21",
     "luxon": "~3.2.1",
-    "ngx-bootstrap": "~9.0.0",
+    "ngx-bootstrap": "~10.3.0",
     "roboto-fontface": "0.10",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.1",
     "socket.io-client": "^2.2.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.2",
-    "@angular-eslint/builder": "14.0.4",
-    "@angular-eslint/eslint-plugin": "14.0.4",
-    "@angular-eslint/eslint-plugin-template": "14.0.4",
-    "@angular-eslint/schematics": "14.0.4",
-    "@angular-eslint/template-parser": "14.0.4",
-    "@angular/cli": "~14.2.2",
-    "@angular/compiler-cli": "^14.2.1",
-    "@angular/language-service": "^14.2.1",
-    "@types/jasmine": "~4.0.0",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "~15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
+    "@types/jasmine": "~4.3.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
     "@types/node": "^12.11.1",
     "@types/socket.io-client": "1.4",
     "@types/webpack": "4.41",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "eslint": "8.22.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-deprecation": "^1.3.2",
@@ -68,7 +66,7 @@
     "eslint-plugin-rxjs": "^5.0.2",
     "eslint-plugin-rxjs-angular": "^2.0.0",
     "husky": "^8.0.0",
-    "jasmine-core": "~4.3.0",
+    "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
@@ -82,7 +80,7 @@
     "stylelint-prettier": "3.0.0",
     "stylelint-scss": "5.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.8.3",
+    "typescript": "~4.9.4",
     "webpack-bundle-analyzer": "4.5.0"
   },
   "lint-staged": {
