refactor: Update auth directives to use directive composition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
       "node_modules/@types"
     ],
     "strictPropertyInitialization": false,
-    "allowSyntheticDefaultImports": true,
-    "useDefineForClassFields": false
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
