--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.8",
     "@angular/compiler-cli": "^15.2.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
@@ -57,15 +58,15 @@
     "@types/webpack": "4.41",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-deprecation": "^1.3.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-rxjs": "^5.0.2",
-    "eslint-plugin-rxjs-angular": "^2.0.0",
-    "husky": "^8.0.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-deprecation": "^1.5.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-rxjs": "^5.0.3",
+    "eslint-plugin-rxjs-angular": "^2.0.1",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -73,12 +74,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-junit-reporter": "~2.0.0",
-    "lint-staged": "~13.0.0",
-    "prettier": "~2.8.8",
-    "stylelint": "15.10.1",
-    "stylelint-config-recommended-scss": "11.0.0",
-    "stylelint-prettier": "3.0.0",
-    "stylelint-scss": "5.0.0",
+    "lint-staged": "~13.2.3",
+    "prettier": "~3.0.0",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "stylelint": "15.10.2",
+    "stylelint-config-recommended-scss": "12.0.0",
+    "stylelint-prettier": "4.0.1",
+    "stylelint-scss": "5.0.1",
     "ts-node": "~8.3.0",
     "typescript": "~4.9.4",
     "webpack-bundle-analyzer": "4.5.0"
