--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^15.2.9",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@ng-select/ng-select": "~10.0.4",
+    "@ng-web-apis/common": "^3.0.2",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
     "lodash": "~4.17.21",
