refactor: code cleanup
* Replace usage of `untilDestroy` with new built-in `takeUntilDestroy` in components and directives
* Favor `inject(...)` over constructor arguments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,7 +92,8 @@
           "error",
           {
             "alias": [
-              "untilDestroyed"
+              "untilDestroyed",
+              "takeUntilDestroyed"
             ]
           }
         ]
