--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,13 @@
             "style": "kebab-case"
           }
         ],
+        "@angular-eslint/prefer-on-push-component-change-detection": ["off"],
+        "@angular-eslint/prefer-output-readonly": ["error"],
+        "@angular-eslint/prefer-standalone": ["warn"],
+        "@angular-eslint/relative-url-prefix": ["error"],
+        "@angular-eslint/use-component-view-encapsulation": ["error"],
+        "@angular-eslint/use-injectable-provided-in": ["error"],
+        "@angular-eslint/use-lifecycle-interface": ["error"],
         "@typescript-eslint/no-explicit-any": ["off"],
         "@typescript-eslint/no-unused-vars": [
           "warn",
@@ -106,7 +113,23 @@
       "extends": [
         "plugin:@angular-eslint/template/recommended"
       ],
-      "rules": {}
+      "rules": {
+        "@angular-eslint/template/alt-text": ["error"],
+        "@angular-eslint/template/button-has-type": ["error"],
+        "@angular-eslint/template/click-events-have-key-events": ["error"],
+        "@angular-eslint/template/elements-content": ["error"],
+        "@angular-eslint/template/interactive-supports-focus": ["error"],
+        "@angular-eslint/template/label-has-associated-control": ["error"],
+        "@angular-eslint/template/mouse-events-have-key-events": ["error"],
+        "@angular-eslint/template/no-any": ["error"],
+        "@angular-eslint/template/no-distracting-elements": ["error"],
+        "@angular-eslint/template/prefer-control-flow": ["error"],
+        "@angular-eslint/template/prefer-ngsrc": ["error"],
+        "@angular-eslint/template/prefer-self-closing-tags": ["error"],
+        "@angular-eslint/template/role-has-required-aria": ["error"],
+        "@angular-eslint/template/table-scope": ["error"],
+        "@angular-eslint/template/valid-aria": ["error"]
+      }
     },
     {
       "files": [
