style: update prettier config to sort width/height attrs with src/ngSrc

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -21,6 +21,9 @@
     "$DATA",
     "^\\[data-",
     "$SRC",
+    "^ngSrc$",
+    "^height$",
+    "^width$",
     "$FOR",
     "$TYPE",
     "^\\[type]$",
