--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.4",
+    "@angular/animations": "^17.3.11",
     "@angular/cdk": "^16.2.12",
-    "@angular/common": "^17.3.4",
-    "@angular/compiler": "^17.3.4",
-    "@angular/core": "^17.3.4",
-    "@angular/forms": "^17.3.4",
-    "@angular/platform-browser": "^17.3.4",
-    "@angular/platform-browser-dynamic": "^17.3.4",
-    "@angular/router": "^17.3.4",
+    "@angular/common": "^17.3.11",
+    "@angular/compiler": "^17.3.11",
+    "@angular/core": "^17.3.11",
+    "@angular/forms": "^17.3.11",
+    "@angular/platform-browser": "^17.3.11",
+    "@angular/platform-browser-dynamic": "^17.3.11",
+    "@angular/router": "^17.3.11",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@ng-bootstrap/ng-bootstrap": "~16.0.0",
     "@ng-select/ng-select": "~12.0.7",
     "@ng-web-apis/common": "^3.0.6",
     "@ng-web-apis/storage": "^3.0.6",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "lodash": "~4.17.21",
     "luxon": "~3.2.1",
-    "ngx-bootstrap": "~12.0.0",
     "roboto-fontface": "0.10",
     "rxjs": "~7.8.1",
     "socket.io-client": "^2.2.0",
@@ -42,14 +43,14 @@
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.4",
+    "@angular-devkit/build-angular": "^17.3.8",
     "@angular-eslint/builder": "17.3.0",
     "@angular-eslint/eslint-plugin": "17.3.0",
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/schematics": "17.3.0",
     "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "~17.3.4",
-    "@angular/compiler-cli": "^17.3.4",
+    "@angular/cli": "~17.3.8",
+    "@angular/compiler-cli": "^17.3.11",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "4.14",
