--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,32 @@
+/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
+/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
     "compileOnSave": false,
     "compilerOptions": {
-        "baseUrl": "./",
         "outDir": "./dist/out-tsc",
-        "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "esModuleInterop": true,
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "skipLibCheck": true,
+        "isolatedModules": true,
+        "esModuleInterop": true,
         "sourceMap": true,
         "declaration": false,
         "experimentalDecorators": true,
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "importHelpers": true,
         "target": "ES2022",
         "module": "ES2022",
-        "useDefineForClassFields": false,
-        "lib": ["ES2022", "dom"],
+        "lib": [
+          "ES2022",
+          "dom"
+        ],
         "typeRoots": ["node_modules/@types"],
         "strictPropertyInitialization": false,
-        "skipLibCheck": true
+        "useDefineForClassFields": false,
+        "forceConsistentCasingInFileNames": true
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
